tests/assets/www/1.1/errors/malformed.json.php
<!DOCTYPE html>
<script></script>
<p>hello</p>
<br>
<hr>
